--- a/index.css
+++ b/index.css
@@ -1,452 +1,140 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
-
-body {
-    font-family: 'Noto Sans TC', sans-serif;
-    padding:0px;
-    margin:0px;
-    max-width:100vw;
-    overflow-x:hidden;
-    scroll-behavior: smooth;
-}
-#loading {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    background: white;
-    z-index: 999;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-#spinner {
-    animation: rotate 0.56s infinite linear;
-    width:50px;
-    height:50px;
-    border:12px solid rgb(21, 144, 254);
-    border-bottom:12px solid #fff;
-    border-radius:50%;
-    margin:0;
-}
-@keyframes rotate {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
-}
-header {
-    width:92vw;
-    padding:6vh 4vw;
-    position:fixed;
-    font-weight:bold;
-    background:transparent;
-    color:#fff;
-    transition:0.4s ease-in-out;
-    z-index:2;
-}
-header table {
-    width:100%;
-}
-#logo {
-    width:20%;
-}
-#navigation {
-    width:80%;
-}
-#magnify {
-    width:100vw;
-    height:100vh;
-    background:rgba(0, 0, 0, 0.92);
-    position:fixed;
-    z-index:4;
-    display:none;
-    flex-direction: column;
-    justify-content:center;
-}
-#magnify h1 {
-    position:absolute;
-    top:0;
-    right:0;
-    margin:20px 40px;
-    color:#fff;
-    transition:0.4s ease-in-out;
-}
-#magnify h1:hover{
-    color:rgb(21, 144, 254);
-    cursor:pointer;
-}
-#img_here {
-    width:90%;
-    height:90%;
-    background-size:contain !important;
-    background-repeat:no-repeat !important;
-    margin:0px auto;
-}
-#logo {
-    font-size:24px;
-    background-color: white;
-    color:rgb(24, 82, 190);
-}
-#navigation {
-    text-align:right;
-}
-#navigation a {
-    color:inherit;
-    text-decoration:none;
-    padding:5px 10px;
-    border-bottom:2px solid transparent;
-    margin-left:4vw;
-    transition:0.4s ease-in-out;
-}
-#navigation a:hover{
-    border-bottom:2px solid #fff;
-}
-#top_part {
-    width:100%;
-    border:2vh solid #fff;
-}
-#top_part tr td{
-    width:50%;
-}
-#about {
-    width:84% !important;
-    height:95vh;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    text-align:left;
-    padding:0px 8%;
-}
-#about h1 {
-    font-size:45px;
-    margin-bottom:0;padding-bottom:0
-    word-wrap:break-word;
-}
-#about table {
-    width:70%;
-    margin-top:4vh;
-}
-#about table tr td {
-    width:20% !important;
-    text-align:left;
-}
-#description {
-    font-size:18px;
-    background-color: white;
-    color:rgb(128, 128, 128);
-}
-.social {
-    color:rgb(21, 144, 254);
-    font-size:23px;
-    padding:12px 18px;
-    border-radius:50%;
-    background:transparent;
-    transition:0.4s ease-in-out;
-    font-weight:bold;
-    margin:0px 8px;
-}
-.social:hover { 
-    cursor: pointer;
-    padding:12px 18px;
-    color:#fff;
-    background:rgb(21, 144, 254);
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
-}
-#social_apple {
-    color:rgb(21, 144, 254);
-    font-size:23px;
-    padding:9px 17px;
-    border-radius:50%;
-    background:transparent;
-    transition:0.4s ease-in-out;
-    font-weight:bold;
-    margin:0px 8px;
-}
-#social_apple:hover { 
-    cursor: pointer;
-    padding:9px 17px;
-    color:#fff;
-    background:rgb(21, 144, 254);
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
-}
-#social_twitter {
-    color:rgb(21, 144, 254);
-    font-size:23px;
-    padding:12px 17px;
-    border-radius:50%;
-    background:transparent;
-    transition:0.4s ease-in-out;
-    font-weight:bold;
-    margin:0px 8px;
-}
-#social_twitter:hover { 
-    cursor: pointer;
-    padding:12px 17px;
-    color:#fff;
-    background:rgb(21, 144, 254);
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
-}
-.btn_one {
-    font-size:18px;
-    font-family: 'Noto Sans TC', sans-serif;
-    color:rgb(21, 144, 254);
-    background:#fff;
-    border:3px solid rgba(21, 144, 254);
-    padding:8px 40px;
-    width:35%;
-    border-radius:80px;
-    font-weight:bold;
-    margin:2vh 0px;
-    transition:0.4s ease-in-out;
-}
-.btn_one:hover {
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
-    cursor:pointer;
-    color:#fff;
-    background:rgba(21, 144, 254);
-}
-.line{
-    line-height: 28px;
-}
-#rightImage {
-    width:50%;
-    height:60vh;
-    background:linear-gradient(0deg,rgba(21, 144, 254, 0.8),rgba(0, 51, 102, 0.8)),url("https://img.onl/7hkTpV") center center;
-    background-size:cover;
-    background-repeat:no-repeat;
-}
-#work {
-    width:92vw;
-    padding:6vh 4vw;
-    font-weight:bold;
-}
-#work h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width:85px;
-}
-
-#skill {
-    width:92vw;
-    padding:6vh 4vw;
-    font-weight:bold;
-}
-#skill h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width: 85px;
-}
-#bio {
-    width:92vw;
-    padding:6vh 4vw;
-    font-weight:bold;
-    font-family: 'Noto Sans TC', sans-serif;
-}
-#bio h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width:85px;
-}
-
-#gotop {
-    position:fixed;
-    z-index:90;
-    right:30px;
-    bottom:20px;
-    display:none;
-    width:45px;
-    height:45px;
-    color:#fff;
-    opacity: 0.8;
-    background:rgb(20, 144, 254);
-    line-height:45px;
-    border-radius:50%;
-    transition:all 2s;
-    text-align: center;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-}
-#gotop :hover{
-    background: rgb(20, 144, 254);
-    opacity: 1 ;
-}
-#contact {
-    width:92vw;
-    padding:6vh 4vw;
-}
-#contact h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width:10%;
-}
-#contact table {
-    width:100%;
-}
-#contact table tr td {
-    width:50%;
-}
-#inner_div table{
-    width:100%;
-}
-#inner_div table tr td{
-    font-weight:bold;
-}
-#inner_table tr td{
-    padding:10px 20px !important;
-}
-#contact form {
-    width:100%;
-}
-#contact form input {
-    width:96%;
-    margin:20px 1%;
-    background:transparent;
-    border:0px;
-    border-bottom:3px solid rgba(21, 144, 254, 0.8);
-    padding:8px 10px;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size:18px;
-    transition:0.4s ease-in-out;
-    color:#000;
-    font-weight:bold;
-}
-#contact form textarea {
-    width:96%;
-    margin:20px 1%;
-    padding:8px 10px;
-    border:0px;
-    border-bottom:3px solid rgba(21, 144, 254, 0.8);
-    padding:8px 10px;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size:18px;
-    background:transparent;
-    resize:none;
-    transition:0.4s ease-in-out;
-    color:#000;
-    font-weight:bold;
-}
-#contact form input:focus {
-    outline:none;
-    border-bottom:3px solid rgba(21, 144, 254);
-}
-#contact form textarea:focus {
-    outline:none;
-    border-bottom:3px solid rgba(21, 144, 254));
-}
-#address {
-    position:relative;
-    top:-25px;
-    left:30px;
-}
-#footer {
-    width:100%;
-    padding:10vh 0px;
-    text-align:center;
-    font-weight:bold;
-}
-#footer a {
-    color:rgb(20, 144, 254);
-    text-decoration:none;
-}
-::placeholder {
-    color:#000;
-}
-button:focus {
-    outline:none;
-}
-::-webkit-scrollbar {
-    width:5px;
-    height:5px;
-}
-::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-}
-::-webkit-scrollbar-thumb {
-    background: rgb(0, 0, 0); 
-}
-::-webkit-scrollbar-thumb:hover {
-    background: rgba(0, 0, 0,0.8); 
-}
-
-@media (max-width: 1000px){
-    #photos {
-    columns:1;
-    column-gap:0%;
-    }
-    #photos img {
-        margin:2% 0px;
-    }
-    #photos img:hover {
-        transform: scale(1);
-        cursor: pointer;
-    }
-    #rightImage {
-        display:none;
-    }
-    #top_part {
-        border:0px;
-    }
-    #top_part tr td{
-        width:100%;
-        text-align:center;
-    }
-    #about {
-        width:92% !important;
-        height:75vh;
-        padding-top:20vh !important;
-        text-align:center;
-        padding:0px 4%;
-    }
-    #about table {
-        width:100%;
-        margin-top:6vh;
-    }
-    #about table tr td {
-        text-align:center;
-    }
-    .btn_one {
-    padding:6px 30px;
-    width:60%;
-    margin:4vh auto;
-    box-shadow:0px 10px 20px rgba(21, 144, 254, 0.8);
-    background:rgb(20, 144, 254);
-    color:#fff;
-    }
-    .btn_one:hover {
-        box-shadow:0px 10px 40px rgba(21, 144, 254, 0.8);
-        cursor:pointer;
-    }
-    #contact table tr td {
-        width:100%;
-        display:block;
-    }
-    #inner_table tr td{
-        padding:10px 0px !important;
-    }
-    #contact form input {
-        width:90%;
-    }
-    #contact form textarea {
-        width:90%;
-    }
-    #work h1 {
-        width:19%;
-    }
-    #bio h1 {
-        width:25%;
-    }
-    #contact h1 {
-        width:33%;
-    }
-    header {
-        width:96vw;
-        background:#fff;
-        padding:4vh 2vw;
-        position:absolute;
-    }
-    #header table tr td {
-        width:100%;
-        display:block;
-        text-align:center;
-        padding:15px 0px;
-    }
-    #navigation a {
-        color:#000;
-    }
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <!-- 
+    Author : @ 工常張Shawn
+    Last Upadte: 15:57, 11/21 , 2020
+    This's Shawn's personal website.
+    -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Jun Shawn - Tech Editor & Apple User</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'/></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div id="loading">
+        <div id="spinner"></div>
+    </div>
+    <div id="magnify">
+        <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
+        <div id="img_here"></div>
+    </div>
+    <div id="gotop"><i class="fas fa-angle-up"></i></div>  
+    <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
+        <table>
+            <tr>
+                <td id="logo">Jun Shawn</td>
+                <td id="navigation">
+                    <a href="#work">Protfolio</a>
+                    <a href="#bio">About</a>
+                    <a href="#skill">Skill</a>
+                    <a href="#contact">Contact</a>
+                </td>
+            </tr>
+        </table>
+    </header>
+    <table id="top_part">
+        <tr>
+            <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
+                <h1>Welcome,<br><span class="type">Tech Your Time.</span></h1>
+                <p id = "description">
+                    Student / Tech Editor / Coder
+                </p>
+                <button onclick="window.location = 'mailto:kcshawn19@gmail.com'" class="btn_one">與我聯繫</button><br>
+                <table>
+                    <tr>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/changshawn19"><i class="fab fa-facebook"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href= "https://www.instagram.com/jschang19/"><i class="fab fa-instagram"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a id="social_apple" href= "https://applealmond.com/"><i class="fab fa-apple"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social" href= "https://www.medium.com/jun-shawn"><i class="fab fa-medium"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.4s;"><a id="social_twitter" href="https://twitter.com/junshawn_"><i class="fab fa-twitter"></i></a></td>
+                    </tr>
+                </table>
+            </td>
+            <td id="rightImage" class="animated jackInTheBox" style="animation-delay:2.2s;"></td>
+        </tr>
+    </table>
+    <div id="work">
+        <h1>Protfolio</h1>
+        <p>
+            ddd
+        </p>
+        <p>
+            ggg
+        </p>
+    </div>
+    <div id="bio">
+        <h1>About</h1>
+        <h2>關於 Jun Shawn</h2>
+        <h3>經歷</h3>
+        <ul>
+            <li>科技媒體《 <a href="https://applealmond.com/" target= "_blank" >蘋果仁</a> 》 IG 編輯</li>
+            <li style="margin: 15px 0;">自媒體《 <a href="https://applealmond.com/" target= "_blank" >工常張Shawn</a> 》經營者</li>
+            <li>臉書社團 《 <a href="https://applealmond.com/" target= "_blank" >我們都是蘋果人</a> 》版主 <p>（ 現有 20 萬名成員 ）</p></li>
+        </ul>
+        <hr width=25% align="left" +size=3 color=#2a2a2d style="border:1 dashed #2a2a2d">
+        <p class = "bio_content">
+            Hi 我是 Shawn，是澎湖馬公高中的高二學生，也是個蘋果用戶
+        </p>
+        <p class = "bio_content">   
+            高一時發現自己喜歡寫作，加上對科技、3C 有興趣，開始成為部落客，撰寫蘋果產品的教學，與學生新課綱資訊，偶爾練練 Coding。
+        </p>
+       <p class = "bio_content" > 
+        目前在知名科技媒體 《蘋果仁》 擔任社群編輯，也經營個人部落格《工常張 Shawn》，擁有一年多的網路寫作經驗，瞭解 SEO 技術、3C 知識，並具備程式開發能力，本站最高有單月 78000 次不重複瀏覽量。
+        </p>
+    </div>
+    <div id ="skill">
+        <h1>Skill</h1>
+    </div>
+    <div id="contact">
+        <h1>Contact</h1>
+            <table>
+                <tr>
+                    <td>
+                        <div id="inner_div">
+                            <table id="inner_table">
+                                <tr>
+                                    <td><i class="fas fa-phone"></i> &nbsp; +1 234 567 8910</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="fas fa-at"></i> &nbsp; kcshawn19@gmail.com</td>
+                                </tr>
+                                 <tr>
+                                    <td><i class="fas fa-fax"></i> &nbsp; +1 234 567 8910</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a class="social"><i class="fab fa-facebook"></i></a>
+                                        <a class="social"><i class="fab fa-instagram"></i></a>
+                                        <a id="social_apple"><i class="fab fa-apple"></i></a>
+                                        <a class="social"><i class="fab fa-medium"></i></a>
+                                        <a class="social"><i class="fab fa-twitter"></i></a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </td>
+                    <td>
+                        <form>
+                            <input type="text" placeholder="name" required>
+                            <input type="email" placeholder="email" required><br>
+                            <textarea placeholder="your message" required rows="5"></textarea><br>
+                            <button class="btn_one">send</button>
+                        </form> 
+                    </td>
+                </tr>
+            </table>
+    </div>
+    <div id="footer">
+        &#60; Jun Shawn's Personal website. / &#62; <br>
+        TEMPLET BY <a href="https://imfunniee.github.io">imfunniee</a>
+    </div>
+    <script src="index.js" type="text/javascript"></script>
+    <!-- This is Jun Shawn,s personal web page, useing the templet from imfuniee. -->
+</body>
+</html>
