--- a/index.css
+++ b/index.css
@@ -1,485 +1,596 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins");
+@import url("https://fonts.googleapis.com/css?family=Questrial");
 
 body {
-    font-family: 'Noto Sans TC', sans-serif;
-    font-weight:400;
-    padding:0px;
-    margin:0px;
-    max-width:100vw;
-    overflow-x:hidden;
-    scroll-behavior: smooth;
+  margin: 0%;
+  padding: 0%;
+  width: 100vw;
+  background: var(--bg-color);
+  color: var(--text-color);
+  max-width: 100vw;
+  overflow-x: hidden;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
 }
+
 #loading {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    background: white;
-    z-index: 999;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background: var(--bg-color);
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
+
 #spinner {
-    animation: rotate 0.56s infinite linear;
-    width:50px;
-    height:50px;
-    border:12px solid rgb(21, 144, 254);
-    border-bottom:12px solid #fff;
-    border-radius:50%;
-    margin:0;
+  animation: rotate 0.5s infinite linear;
+  width: 50px;
+  height: 50px;
+  border: 2px solid var(--bg-color);
+  border-bottom: 2px solid var(--text-color);
+  border-radius: 50%;
+  margin: 0;
 }
+
 @keyframes rotate {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
-}
-header {
-    width:92vw;
-    padding:6vh 4vw;
-    position:fixed;
-    font-weight:bold;
-    background:transparent;
-    color:#fff;
-    transition:0.4s ease-in-out;
-    z-index:2;
-}
-header table {
-    width:100%;
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-a:link {
-    color: #1590fe;
-    text-decoration:none;
-}
-a:hover {
-    color: #003366;
-    text-decoration:underline;
-}
-a:active {
-    color: #1590fe;
-    text-decoration:underline;
-}
-#logo {
-    width:20%;
-}
-#navigation {
-    width:80%;
-}
-#magnify {
-    width:100vw;
-    height:100vh;
-    background:rgba(0, 0, 0, 0.92);
-    position:fixed;
-    z-index:4;
-    display:none;
-    flex-direction: column;
-    justify-content:center;
-}
-#magnify h1 {
-    position:absolute;
-    top:0;
-    right:0;
-    margin:20px 40px;
-    color:#fff;
-    transition:0.4s ease-in-out;
-}
-#magnify h1:hover{
-    color:rgb(21, 144, 254);
-    cursor:pointer;
-}
-#img_here {
-    width:90%;
-    height:90%;
-    background-size:contain !important;
-    background-repeat:no-repeat !important;
-    margin:0px auto;
-}
-#logo {
-    font-size:24px;
-    background-color: white;
-    color:rgb(24, 82, 190);
-}
-#navigation {
-    text-align:right;
-}
-#navigation a {
-    color:inherit;
-    text-decoration:none;
-    padding:5px 10px;
-    border-bottom:2px solid transparent;
-    margin-left:4vw;
-    transition:0.4s ease-in-out;
-}
-#navigation a:hover{
-    border-bottom:2px solid #fff;
-}
-#top_part {
-    width:100%;
-    border:2vh solid #fff;
-}
-#top_part tr td{
-    width:50%;
-}
-.pf_content{
-    font-weight:400;
-    line-height: 28px;
-    max-width: 80%;
-}
-#about {
-    width:84% !important;
-    height:95vh;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    text-align:left;
-    padding:0px 8%;
-}
-#about h1 {
-    font-size:40px;
-    margin-bottom:0;padding-bottom:0
-    word-wrap: break-word;
-}
-#about h2{
-    font-weight: 400;
-}
-.about_ul{
-    font-weight: 400;
-}
-#about table {
-    width:70%;
-    margin-top:4vh;
-}
-#about table tr td {
-    width:20% !important;
-    text-align:left;
-}
-#description {
-    font-weight: 400;
-    font-size:18px;
-    background-color: white;
-    color:rgb(128, 128, 128);
-}
-.social {
-    color:rgb(21, 144, 254);
-    font-size:23px;
-    padding:12px 18px;
-    border-radius:50%;
-    background:transparent;
-    transition:0.4s ease-in-out;
-    font-weight:bold;
-    margin:0px 8px;
-}
-.social:hover { 
-    cursor: pointer;
-    padding:12px 18px;
-    color:#fff;
-    background:rgb(21, 144, 254);
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
-}
-#social_apple {
-    color:rgb(21, 144, 254);
-    font-size:23px;
-    padding:9px 17px;
-    border-radius:50%;
-    background:transparent;
-    transition:0.4s ease-in-out;
-    font-weight:bold;
-    margin:0px 8px;
-}
-#social_apple:hover { 
-    cursor: pointer;
-    padding:9px 17px;
-    color:#fff;
-    background:rgb(21, 144, 254);
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
-}
-#social_twitter {
-    color:rgb(21, 144, 254);
-    font-size:23px;
-    padding:12px 17px;
-    border-radius:50%;
-    background:transparent;
-    transition:0.4s ease-in-out;
-    font-weight:bold;
-    margin:0px 8px;
-}
-#social_twitter:hover { 
-    cursor: pointer;
-    padding:12px 17px;
-    color:#fff;
-    background:rgb(21, 144, 254);
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
-}
-.btn_one {
-    font-size:18px;
-    font-family: 'Noto Sans TC', sans-serif;
-    color:rgb(21, 144, 254);
-    background:#fff;
-    border:3px solid rgba(21, 144, 254);
-    padding:8px 40px;
-    width:35%;
-    border-radius:80px;
-    font-weight:bold;
-    margin:2vh 0px;
-    transition:0.4s ease-in-out;
-}
-.btn_one:hover {
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
-    cursor:pointer;
-    color:#fff;
-    background:rgba(21, 144, 254);
-}
-.bio_list {
-
-    margin: 15px 0;
-    padding-right:10%;
-}
-.bio_content{
-    font-weight:400;
-    line-height: 28px;
-    max-width: 80%;
-}
-#rightImage {
-    width:50%;
-    height:60vh;
-    background-image: url("https://img.onl/7hkTpV");
-    background-size:cover;
-    background-repeat:no-repeat;
-}
-#work {
-    width:92vw;
-    padding:6vh 4vw;
-    font-weight:400;
-}
-#work h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width:85px;
+#profile {
+  width: 24vw;
+  padding: 4vh 3vw;
+  height: 92vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  background: var(--background-image) center center;
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  position: fixed;
+  color: #fff !important;
 }
 
-#skill {
-    width:92vw;
-    padding:6vh 4vw;
-    font-weight:bold;
-}
-#skill h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width: 85px;
-}
-#bio {
-    width:92vw;
-    padding:6vh 4vw;
-    font-weight:bold;
-    font-family: 'Noto Sans TC', sans-serif;
-}
-#bio h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width:85px;
+#display {
+  width: 64vw;
+  padding: 4vh 3vw;
+  height: 92vh;
+  display: inline-block;
+  padding-left: 33vw;
 }
 
-#gotop {
-    position:fixed;
-    z-index:90;
-    right:30px;
-    bottom:20px;
-    display:none;
-    width:45px;
-    height:45px;
-    color:#fff;
-    opacity: 0.8;
-    background:rgb(20, 144, 254);
-    line-height:45px;
-    border-radius:50%;
-    transition:all 2s;
-    text-align: center;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+#display h1 {
+  font-size: 50px;
+  color: var(--text-color);
+  font-weight: bold;
+  font-family: "Questrial", sans-serif;
 }
-#gotop :hover{
-    background: rgb(20, 144, 254);
-    opacity: 1 ;
+
+.emoji {
+  width: 18px;
+  height: 18px;
 }
-#contact {
-    width:92vw;
-    padding:6vh 4vw;
+
+#profile_img_blog {
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+  background-size: cover !important;
+  background-repeat: no-repeat;
 }
-#contact h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width:10%;
+
+#username_blog {
+  font-size: 18px;
+  color: var(--text-color);
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
 }
-#contact table {
-    width:100%;
+
+#username_blog span {
+  font-size: 24px;
+  font-family: "Questrial", sans-serif !important;
 }
-#contact table tr td {
-    width:50%;
+
+#username_blog b {
+  font-size: 12px;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
 }
-#inner_div table{
-    width:100%;
+
+#blog-display {
+  width: 60vw;
+  margin: 0px 20vw;
+  text-align: left;
+  margin-top: 3vh;
+  z-index: 1;
 }
-#inner_div table tr td{
-    font-weight:bold;
+
+#profile_blog {
+  width: 60vw;
+  margin: 0px 20vw;
+  margin-top: 34vh;
+  text-align: left;
+  z-index: 1;
 }
-#inner_table tr td{
-    padding:10px 20px !important;
+
+#background_overlay {
+  width: 100vw;
+  height: 55vh;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
 }
-#contact form {
-    width:100%;
+
+#background {
+  width: 100vw;
+  height: 55vh;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  position: absolute;
+  z-index: -2;
+  top: 0;
+  left: 0;
 }
-#contact form input {
-    width:96%;
-    margin:20px 1%;
-    background:transparent;
-    border:0px;
-    border-bottom:3px solid rgba(21, 144, 254, 0.8);
-    padding:8px 10px;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size:18px;
-    transition:0.4s ease-in-out;
-    color:#000;
-    font-weight:bold;
+
+#blog-display h1 {
+  font-size: 50px;
+  color: var(--text-color);
+  font-weight: bold;
+  font-family: "Questrial", sans-serif;
 }
-#contact form textarea {
-    width:96%;
-    margin:20px 1%;
-    padding:8px 10px;
-    border:0px;
-    border-bottom:3px solid rgba(21, 144, 254, 0.8);
-    padding:8px 10px;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size:18px;
-    background:transparent;
-    resize:none;
-    transition:0.4s ease-in-out;
-    color:#000;
-    font-weight:bold;
+
+#blog-display h2 {
+  color: var(--blog-gray-color);
 }
-#contact form input:focus {
-    outline:none;
-    border-bottom:3px solid rgba(21, 144, 254);
+
+#blog-display {
+  padding: 1vh 0px;
+  font-family: "Questrial", sans-serif;
 }
-#contact form textarea:focus {
-    outline:none;
-    border-bottom:3px solid rgba(21, 144, 254));
+
+#blog p {
+  font-size: 17px;
+  line-height: 25px;
+  word-spacing: 1.2px;
+  margin: 5vh 0px;
 }
-#address {
-    position:relative;
-    top:-25px;
-    left:30px;
+
+#blog p span {
+  padding: 2px 4px;
+  background: var(--text-color);
+  color: var(--bg-color) !important;
 }
+
+#blog img {
+  width: 100%;
+  margin: 2vh 0px;
+  border-radius: 5px;
+  border: 1px solid rgb(0, 0, 0, 0.08);
+}
+
+#header {
+  width: 63vw;
+  text-align: right;
+  padding: 3vh 0px;
+  position: absolute;
+}
+
+#header a {
+  color: var(--text-color);
+  text-decoration: none;
+  margin-left: 4vw;
+  font-weight: bold;
+}
+
+#footer_blog {
+  width: 90vw;
+  padding: 8vh 5vw;
+  text-align: center;
+}
+
+#footer_blog a {
+  color: var(--text-color) !important;
+  text-decoration: none;
+  font-family: "Questrial", sans-serif;
+  font-weight: bold;
+}
+
 #footer {
-    width:100%;
-    padding:10vh 0px;
-    text-align:center;
-    font-weight:bold;
-}
-#footer a {
-    color:rgb(20, 144, 254);
-    text-decoration:none;
-}
-::placeholder {
-    color:#000;
-}
-button:focus {
-    outline:none;
-}
-::-webkit-scrollbar {
-    width:5px;
-    height:5px;
-}
-::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-}
-::-webkit-scrollbar-thumb {
-    background: rgb(0, 0, 0); 
-}
-::-webkit-scrollbar-thumb:hover {
-    background: rgba(0, 0, 0,0.8); 
+  width: 100%;
+  padding: 8vh 0px;
+  text-align: center;
 }
 
-@media (max-width: 1000px){
-    #photos {
-    columns:1;
-    column-gap:0%;
-    }
-    #photos img {
-        margin:2% 0px;
-    }
-    #photos img:hover {
-        transform: scale(1);
-        cursor: pointer;
-    }
-    #rightImage {
-        display:none;
-    }
-    #top_part {
-        border:0px;
-    }
-    #top_part tr td{
-        width:100%;
-        text-align:center;
-    }
-    #about {
-        width:92% !important;
-        height:75vh;
-        padding-top:20vh !important;
-        text-align:center;
-        padding:0px 4%;
-    }
-    #about table {
-        width:100%;
-        margin-top:6vh;
-    }
-    #about table tr td {
-        text-align:center;
-    }
-    .btn_one {
-    padding:6px 30px;
-    width:60%;
-    margin:4vh auto;
-    box-shadow:0px 10px 20px rgba(21, 144, 254, 0.8);
-    background:rgb(20, 144, 254);
-    color:#fff;
-    }
-    .btn_one:hover {
-        box-shadow:0px 10px 40px rgba(21, 144, 254, 0.8);
-        cursor:pointer;
-    }
-    #contact table tr td {
-        width:100%;
-        display:block;
-    }
-    #inner_table tr td{
-        padding:10px 0px !important;
-    }
-    #contact form input {
-        width:90%;
-    }
-    #contact form textarea {
-        width:90%;
-    }
-    #work h1 {
-        width:19%;
-    }
-    #bio h1 {
-        width:25%;
-    }
-    #contact h1 {
-        width:33%;
-    }
-    header {
-        width:96vw;
-        background:#fff;
-        padding:4vh 2vw;
-        position:absolute;
-    }
-    #header table tr td {
-        width:100%;
-        display:block;
-        text-align:center;
-        padding:15px 0px;
-    }
-    #navigation a {
-        color:#000;
-    }
+#footer a {
+  color: var(--text-color) !important;
+  text-decoration: none;
+  font-family: "Questrial", sans-serif;
+  font-weight: bold;
+}
+
+#profile_img {
+  width: 180px;
+  height: 180px;
+  min-width: 180px;
+  min-height: 180px;
+  max-width: 180px;
+  max-height: 180px;
+  border-radius: 5px;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+}
+
+#profile div {
+  font-weight: bold;
+  margin: 1.5vh 0px;
+}
+
+#username {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+#username span {
+  font-size: 24px;
+}
+
+#userbio {
+  font-size: 26px;
+  font-family: "Questrial", sans-serif;
+  width: 100%;
+}
+
+#about {
+  font-size: 18px;
+  font-family: "Questrial", sans-serif;
+}
+
+#about a,
+#username a {
+  color: #fff !important;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+#about a:hover,
+#username a:hover {
+  text-decoration: underline;
+}
+
+#about span {
+  margin: 1vh 0px;
+  display: block;
+}
+
+#about span i {
+  font-size: 16px;
+}
+
+#work {
+  margin: 2vh 0px;
+  padding: 4vh 0px !important;
+}
+
+#forks {
+  margin: 2vh 0px;
+  padding: 4vh 0px !important;
+}
+
+.projects {
+  margin-left: -15px;
+  /* align section w/ heading above */
+}
+
+.projects a {
+  /* 30px is the gutter size in magic grid */
+  width: calc(49% - 30px);
+  /* 49% avoids a weird single column on some wide screens */
+  display: flex;
+  text-decoration: none;
+}
+
+.projects section {
+  width: 100%;
+  padding: 2.5vh 5%;
+  margin: 1vh 0px;
+  display: inline-block;
+  border-radius: 5px;
+  color: var(--text-color);
+  border: 1px solid rgb(0, 0, 0, 0.08);
+  box-shadow: 0px 0px 0px rgb(0, 0, 0, 0);
+  transition: 0.4s ease-in-out;
+  transform: scale(1);
+}
+
+.projects section:hover {
+  cursor: pointer;
+  border: 1px solid rgb(0, 0, 0, 0);
+  box-shadow: 0px 15px 35px rgb(0, 0, 0, 0.06);
+  transform: scale(1.03);
+}
+
+.section_title {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 1vh 0px;
+  padding: 0px 1px;
+  word-wrap: break-word;
+}
+
+.about_section {
+  font-size: 18px;
+  font-family: "Questrial", sans-serif;
+  margin: 2vh 0px;
+  font-weight: bold;
+  word-wrap: break-word;
+}
+
+.bottom_section {
+  margin: 1vh 0px;
+  font-size: 14px;
+  word-wrap: break-word;
+}
+
+.bottom_section span {
+  margin-right: 20px;
+  font-weight: bold;
+}
+
+.bottom_section span i {
+  font-size: 15px;
+}
+
+.socials {
+  color: #fff;
+  text-decoration: none;
+  margin: 3vh 0px !important;
+}
+
+.socials span {
+  display: inline-block !important;
+  margin-right: 2vw !important;
+  font-weight: normal !important;
+}
+
+.socials span a {
+  font-weight: normal !important;
+}
+
+#blog_section {
+  margin: 2vh 0px;
+  padding: 2vh 0px !important;
+}
+
+#blogs {
+  columns: 2;
+}
+
+#blog_title {
+  font-size: 50px;
+}
+
+#blog_sub_title {
+  font-size: 36px;
+  margin-top: -2vh;
+}
+
+#blogs section {
+  width: 100%;
+  display: inline-block;
+  border-radius: 5px;
+  color: var(--text-color);
+  border: 1px solid rgb(0, 0, 0, 0.04);
+  box-shadow: 0px 0px 0px rgb(0, 0, 0, 0);
+  transition: 0.4s ease-in-out;
+  transform: scale(1);
+  padding: 0px;
+  margin: 2vh 0px;
+}
+
+#blogs section img {
+  width: 100%;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.blog_container {
+  padding: 2.5vh 5%;
+}
+
+#blogs section:hover {
+  cursor: pointer;
+  border: 1px solid rgb(0, 0, 0, 0);
+  box-shadow: 0px 15px 35px rgb(0, 0, 0, 0.06);
+  transform: scale(1.03);
+}
+
+.go_back {
+  position: absolute;
+  color: var(--text-color);
+  font-size: 26px;
+  margin-left: 5vw;
+  margin-top: 4vh;
+}
+
+::selection {
+  color: var(--bg-color);
+  background: var(--text-color);
+}
+
+@media (max-width: 800px) {
+  #profile {
+    width: 90vw;
+    padding: 4vh 5vw;
+    height: 60vh;
+    text-align: center;
+    position: relative;
+  }
+
+  #display {
+    width: 90vw;
+    padding: 4vh 5vw;
+    height: auto;
+    display: inline-block;
+    padding-left: 5vw;
+  }
+
+  #profile_img {
+    width: 120px;
+    height: 120px;
+    min-width: 120px;
+    min-height: 120px;
+    max-width: 120px;
+    max-height: 120px;
+    margin: 0px auto !important;
+  }
+
+  #work {
+    margin: 0px;
+  }
+
+  .projects {
+    margin-left: 0;
+    /* remove neg margin to align w/ header */
+  }
+
+  .projects a {
+    width: 100%;
+  }
+
+  .projects section {
+    width: 88%;
+  }
+
+  #blogs {
+    columns: 1;
+  }
+
+  #blogs section {
+    width: 98%;
+  }
+
+  #blog_section {
+    margin: 0px;
+  }
+
+  #blog-display {
+    width: 90vw;
+    margin: 0px 5vw;
+    text-align: left;
+    margin-top: 0vh;
+    z-index: 1;
+  }
+
+  #blog_title {
+    font-size: 32px !important;
+  }
+
+  #blog_sub_title {
+    font-size: 24px;
+    margin-top: -1vh;
+  }
+
+  #profile_blog {
+    width: 90vw;
+    margin: 0px 5vw;
+    margin-top: 36vh;
+    text-align: left;
+    z-index: 1;
+  }
+
+  #profile_img_blog {
+    width: 65px;
+    height: 65px;
+  }
+
+  .go_back {
+    position: relative;
+    color: var(--text-color);
+    font-size: 26px;
+    margin-left: 5vw;
+    top: 5vh;
+  }
+
+  #blog img {
+    margin: 1vh 0px !important;
+  }
+
+  #blog p {
+    margin: 2vh 0px;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--bg-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--text-color);
+}
+:root {
+  --bg-color: rgb(10, 10, 10);
+  --text-color: #fff;
+  --blog-gray-color: rgb(180, 180, 180);
+  --background-image: linear-gradient(
+      90deg,
+      rgba(10, 10, 10, 0.3),
+      rgb(10, 10, 10, 1)
+    ),
+    url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80");
+  --background-background: linear-gradient(
+      0deg,
+      rgba(10, 10, 10, 1),
+      rgba(10, 10, 10, 0.6)
+    ),
+    url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80") center center fixed;
+  --height: 50vh;
+}
+
+#display h1 {
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: #fff;
+}
+
+#blog-display h1 {
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: #fff;
+}
+
+.projects section {
+  background: rgb(20, 20, 20);
+}
+
+#blog_section section {
+  background: rgb(20, 20, 20);
+}
+
+@media (max-width: 800px) {
+  :root {
+    --background-image: linear-gradient(
+        0deg,
+        rgba(10, 10, 10, 1),
+        rgba(10, 10, 10, 0)
+      ),
+      url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80") !important;
+  }
+}
